# opengl-lab-env

./: README.md
engine/render/: window.cc
projects/ImGuiExample/code/: exampleapp.cc
projects/assigment2/: CMakeLists.txt
projects/assigment2/code/: main.cc  reader.cc  reader.h  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  triangulation2dapp.cc  triangulation2dapp.h  triangulation3dapp.cc  triangulation3dapp.h  vertexcalc.cc  vertexcalc.h
projects/assigment3/: CMakeLists.txt
projects/assigment3/code/: Camera.cc  Camera.h  General.h  GraphicsNode.cc  GraphicsNode.h  Material.h  Mesh.cc  Mesh.h  Reader.cc  Reader.h  Shader.cc  Shader.h  ShaderProgram.cc  ShaderProgram.h  ShaderType.h  Simple3DGraphics.cc  Simple3DGraphics.h  SimpleGraphics.cc  SimpleGraphics.h  SimpleMaterial.cc  SimpleMaterial.h  SimpleShader.frag  SimpleShader.vert  Vertex.h  main.cc
projects/assigment4/: CMakeLists.txt
projects/assigment4/code/: Camera.cc  Camera.h  Colors.h  Cube.cc  Cube.h  GraphicsNode.cc  GraphicsNode.h  LightSource.cc  LightSource.h  Mesh.cc  Mesh.h  Node.h  Reader.cc  Reader.h  Scene.cc  Scene.h  Shader.h  ShaderProgram.cc  SimpleGraphics.cc  SimpleGraphics.h  SimpleMaterial.cc  SimpleMaterial.h  SimpleShader.frag  SimpleShader.vert  Tetrahedron.cc  Tetrahedron.h  main.cc
projects/assigment4/code/engine/: Camera.cc  Camera.h  Control.cc  Control.h  GraphicsNode.cc  GraphicsNode.h  IMouse.h  IWASD.h  Material.h  Mesh.cc  Mesh.h  Scene.cc  Scene.h  Shader.h
projects/assigment4/code/engine/io/: Control.cc  Control.h
projects/assigment4/code/engine/material/: Material.h  SimpleMaterial.h
projects/assigment4/code/engine/node/: Camera.cc  Camera.h  GraphicsNode.cc  GraphicsNode.h  LightSource.cc  LightSource.h  Node.h
projects/assigment4/code/engine/node/graphicsNodes/: Cube.h  Tetrahedron.h
projects/assigment4/code/engine/quadTree/: QuadTree.h  QuadTreeLeaf.cc  QuadTreeLeaf.h  QuadTreeNode.cc  QuadTreeNode.h
projects/assigment4/code/engine/shader/: Shader.cc  ShaderProgram.h
projects/assigment4/code/engine/shader/shaders/: SimpleShader.vert
projects/assigment4/code/engine/utils/: Colors.h
projects/assigment4/code/graphicsNodes/: Cube.cc  Cube.h  Tetrahedron.cc  Tetrahedron.h
projects/assigment4/code/materials/: SimpleMaterial.h
projects/assigment4/code/shaders/: SimpleShader.frag
projects/assigment4/code/utils/: Vertex.h
